# A2A-Agent-Engine

./: .env.example  README.md  deploy_agents_cloudrun.sh  deploy_to_agent_engine.py  pixel_ui_server.py  purchasing_concierge_ui.py  pyproject.toml  test_agent_engine.sh
.claude/: settings.local.json
purchasing_concierge/: .env.example  agent.py  purchasing_agent.py  remote_agent_connection.py
remote_travel_agents/flight_agent/: .env.example  __main__.py  agent.py  agent_executor.py  pyproject.toml
remote_travel_agents/hotel_agent/: .env.example  __main__.py  agent.py  agent_executor.py  pyproject.toml
remote_travel_agents/insurance_agent/: .env.example  __main__.py  agent.py  agent_executor.py  pyproject.toml
remote_travel_agents/merchandise_agent/: .env.example  Dockerfile  __main__.py  agent.py  agent_executor.py  pyproject.toml
remote_travel_agents/restaurant_agent/: .env.example  __main__.py  agent.py  agent_executor.py  pyproject.toml
remote_travel_agents/ticket_agent/: .env.example  __main__.py  agent.py  agent_executor.py  pyproject.toml
remote_travel_agents/train_agent/: .env.example  __main__.py  agent.py  agent_executor.py  pyproject.toml
static/: index.html
static/css/: style.css
static/js/: animation.js  app.js  chat.js  sprites.js
